# gedcomx-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
data/: birth.json  birth.xml  birth_nowhitespace.xml  census.json  census.xml  census_nowhitespace.xml  current_person_fs.json  custom_facts.json  custom_facts.xml  custom_facts_nowhitespace.xml  death.json  death.xml  death_nowhitespace.xml  education.json  education.xml  education_nowhitespace.xml  fact_qualifiers.json  fact_qualifiers.xml  fact_qualifiers_nowhitespace.xml  marriage.json  marriage.xml  marriage_nowhitespace.xml  military.json  military.xml  military_nowhitespace.xml  names1.json  names1.xml  names1_nowhitespace.xml  names2.json  names2.xml  names2_nowhitespace.xml  names3.json  names3.xml  names3_nowhitepace.xml  names3_nowhitespace.xml  names4.json  names4.xml  names4_nowhitespace.xml  names5.json  names5.xml  (+11 more)
gedcomx/: Cargo.toml  DESIGN.md  README.md  rustfmt.toml  test.json
gedcomx-cli/: Cargo.toml
gedcomx-cli/src/: main.rs
gedcomx/fuzz/: Cargo.toml
gedcomx/fuzz/fuzz_targets/: deserialize.rs  deserialize_json.rs  deserialize_xml.rs  json.rs  xml.rs
gedcomx/src/: error.rs  gedcomx.rs  jsontypes.rs  lib.rs  macros.rs  toplevel.rs
gedcomx/src/agent/: address.rs  agent.rs  mod.rs  onlineaccount.rs
gedcomx/src/common/: attribution.rs  evidencereference.rs  gedcomxdate.rs  id.rs  lang.rs  mod.rs  note.rs  qualifier.rs  resourcereference.rs  textvalue.rs  timestamp.rs  uri.rs
gedcomx/src/components/: address.rs  attribution.rs  conclusiondata.rs  coverage.rs  date.rs  eventrole.rs  evidencereference.rs  fact.rs  gender.rs  grouprole.rs  mod.rs  name.rs  note.rs  onlineaccount.rs  placereference.rs  qualifier.rs  resourcereference.rs  sourcecitation.rs  sourcereference.rs  subjectdata.rs  textvalue.rs
gedcomx/src/conclusion/: conclusiondata.rs  confidencelevel.rs  date.rs  document.rs  event.rs  eventrole.rs  fact.rs  gender.rs  group.rs  grouprole.rs  identifier.rs  mod.rs  name.rs  person.rs  placedescription.rs  placereference.rs  relationship.rs  subjectdata.rs
gedcomx/src/source/: coverage.rs  mod.rs  sourcecitation.rs  sourcedescription.rs  sourcereference.rs
gedcomx/src/toplevel/: agent.rs  document.rs  event.rs  gedcomx.rs  group.rs  mod.rs  person.rs  placedescription.rs  relationship.rs  sourcedescription.rs  uri.rs
gedcomx/tests/: birth_test.rs  death_test.rs  fact_qualifiers_test.rs  fs_data_test.rs  fuzz_test.rs  marriage_test.rs  name_test.rs  spec_test.rs
gedcomx/tests/common/: mod.rs
gedcomx_file/: Cargo.toml  README.md
gedcomx_file/src/: lib.rs
src/: components.rs  lib.rs  main.rs  toplevel.rs
