[package]
name = "gedcomx-cli"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gedcomx = { path = "../gedcomx"}
serde_json = "1"
serde = "1"

yaserde = {path = "../../yaserde/yaserde"}
yaserde_derive = {path = "../../yaserde/yaserde_derive"}
log = "0.4"
xml-rs = "0.8"