[package]
name = "gedcomx-cli"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = "1"

yaserde = "0.6"
yaserde_derive = "0.6"
log = "0.4"
xml-rs = "0.8"
env_logger = "0"