[package]
name = "gedcomx-cli"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gedcomx = {path = "../gedcomx"}

log = "0.4"
xml-rs = "0.8"
env_logger = "0"