[package]
name = "gedcomx"
version = "0.1.5"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2021"
description = "The core data structures and serialization / deserialization of the GEDCOM X format."
keywords = ["genealogy", "gedcomx", "family-trees"]
categories = ["encoding", "parsing"]
license = "MIT"
repository = "https://github.com/ephraimkunz/gedcomx-rs/tree/main/gedcomx"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
yaserde = "0.9"
yaserde_derive = "0.9"
gedcomx_date = "0.1"
serde_json = "1"
xml-rs = "0.8"
quickcheck = "1"

[dev-dependencies]
pretty_assertions = "1"
assert-json-diff = "2"
env_logger = "0.10"
quickcheck_macros = "1"