[package]
name = "gedcomx"
version = "0.1.7"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2024"
description = "The core data structures and serialization / deserialization of the GEDCOM X format."
keywords = ["genealogy", "gedcomx", "family-trees"]
categories = ["encoding", "parsing"]
license = "MIT"
repository = "https://github.com/ephraimkunz/gedcomx-rs/tree/main/gedcomx"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
yaserde = "0.12"
yaserde_derive = "0.11"
gedcomx_date = "0.1"
serde_json = "1"
xml-rs = "0.8"
quickcheck = "1"

[dev-dependencies]
pretty_assertions = "1"
assert-json-diff = "2"
env_logger = "0.11"
quickcheck_macros = "1"
