[package]
name = "gedcomx_file"
version = "0.1.0-alpha.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2021"
description = "A library for dealing with the GEDCOM X file format"
keywords = ["genealogy", "gedcomx", "family-trees", "format", "file"]
categories = ["encoding", "parsing"]
license = "MIT"
repository = "https://github.com/ephraimkunz/gedcomx-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
thiserror = "1"
gedcomx = "0.1"

